@@ -7,6 +7,8 @@ v2.1.3
 -------------------
 ! some redirects have not been handled correctly (i.e. when IMDBID xxxxxxx was re-routed to yyyyyyy)
 ! imdb::is_serial() and imdb::get_episode_details() were broken due to site changes
+! imdb::episodes() was broken due to site changes. ATTENTION: with this rewrite of the method,
+  the outer array no longer starts at 0 but reflects the real season number (as often requested)!
 
 v2.1.2 (19.01.2012)
 -------------------
